2 lesson adding @media screen

--- a/src/contacts/Contacts.module.css
+++ b/src/contacts/Contacts.module.css
@@ -15,9 +15,19 @@
 
 .contacts{
     border: 1px solid white;
-    width: 200px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     margin-bottom: 20px;
+}
+
+.contacts input, .contacts textarea {
+    width: 100%;
+}
+
+@media screen and (max-width: 360px) {
+    .contacts {
+        width: 100%;
+    }
 }
