--- a/src/distantWork/DistantWork.module.css
+++ b/src/distantWork/DistantWork.module.css
@@ -1,5 +1,5 @@
 .distantWorkBlock {
-    height: 30vh;
+    height: 35vh;
     background-color: #dee079;
 }
 
@@ -13,7 +13,7 @@
 .button a {
     text-decoration: none;
     background-color: rgba(0, 0, 0, 0.49);
-    padding: 5px;
+    padding: 10px 20px;
     color: white;
 }
 
@@ -25,4 +25,9 @@
     width: 300px;
     height: 400px;
     border: 1px solid white;
+}
+
+.title {
+    color: black;
+    text-align: center;
 }
