--- a/src/footer/Footer.module.css
+++ b/src/footer/Footer.module.css
@@ -6,7 +6,8 @@
     background-color: #5cb0d7;
     align-items: center;
     flex-direction: column;
-    justify-content: center;
+
+    /*justify-content: center;*/
 }
 
 .footerContainer h3 {
@@ -17,18 +18,38 @@
     background-color: #fff;
 }
 
-.footer {
+.footerIcons {
     border: 1px solid white;
-    width: 280px;
+    width: 70%;
+    /*width: 250px;*/
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     margin-bottom: 20px;
     background-color: #602b2b;
 }
 
 .icon {
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     background-color: white;
+}
+
+.copyright {
+
+}
+
+@media screen and (max-width: 629px) {
+    .icon {
+        width: 30px;
+        height: 30px;
+    }
+}
+@media screen and (max-width: 360px) {
+    .footerIcons {
+        width: 100%;
+    }
+    .title {
+        text-align: center;
+    }
 }
