--- a/src/skills/Skills.module.css
+++ b/src/skills/Skills.module.css
@@ -20,3 +20,13 @@
     justify-content: space-between;
     flex-wrap: wrap;
 }
+@media screen and (max-width: 629px) {
+    .skills {
+        justify-content: center;
+    }
+}
+@media screen and (min-width: 1265px) {
+    .skills {
+        justify-content: center;
+    }
+}
