--- a/src/projects/project/Project.module.css
+++ b/src/projects/project/Project.module.css
@@ -1,5 +1,5 @@
 .project {
-    background-color: #d9ced2;
+    background-color:#121418;
     width: 300px;
     display: flex;
     flex-direction: column;
