--- a/src/skills/Skills.module.css
+++ b/src/skills/Skills.module.css
@@ -1,16 +1,13 @@
 .skillsBlock {
     min-height: 100vh;
-    background-color: #cbcb77;
+    background-color: #212529;
+    padding: 100px 0;
 }
 
 .skillsContainer {
     align-items: center;
     flex-direction: column;
     justify-content: flex-start;
-}
-
-.title {
-    background-color: #fff;
 }
 
 .skills {
