--- a/src/contacts/Contacts.module.css
+++ b/src/contacts/Contacts.module.css
@@ -1,21 +1,19 @@
 .contactsBlock {
-    background-color: #da94ef;
+    height: 100vh;
+    background-color: #343a40;
+    padding: 100px 0;
 }
 
 .contactsContainer {
-    background-color: #537786;
+    background-color: #343a40;
     align-items: center;
     flex-direction : column;
     justify-content: center;
 }
 
-.title {
-    background-color: #fff;
-}
-
 .contacts{
     border: 1px solid white;
-    width: 50%;
+    width: 70%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
