--- a/src/distantWork/DistantWork.module.css
+++ b/src/distantWork/DistantWork.module.css
@@ -1,10 +1,11 @@
 .distantWorkBlock {
-    height: 35vh;
-    background-color: #dee079;
+    /*height: 35vh;*/
+    padding: 100px 0;
+    background-color: #212529;
 }
 
 .distantWorkContainer {
-    background-color: #d98080;
+    background-color: #212529;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -25,9 +26,4 @@
     width: 300px;
     height: 400px;
     border: 1px solid white;
-}
-
-.title {
-    color: black;
-    text-align: center;
 }
