--- a/src/footer/Footer.module.css
+++ b/src/footer/Footer.module.css
@@ -1,9 +1,10 @@
 .footerBlock {
-    background-color: #da94ef;
+    background-color: #212529;
+    padding: 100px 0;
 }
 
 .footerContainer {
-    background-color: #5cb0d7;
+    background-color: #212529;
     align-items: center;
     flex-direction: column;
 
@@ -12,10 +13,6 @@
 
 .footerContainer h3 {
     margin-top: 0;
-}
-
-.title {
-    background-color: #fff;
 }
 
 .footerIcons {
