--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,78 @@
+/*body {*/
+/*  margin: 0;*/
+/*  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',*/
+/*    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',*/
+/*    sans-serif;*/
+/*  -webkit-font-smoothing: antialiased;*/
+/*  -moz-osx-font-smoothing: grayscale;*/
+/*}*/
+
+/*code {*/
+/*  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',*/
+/*    monospace;*/
+/*}*/
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Poppins', sans-serif;
+
+  color: #fff;
+  font-weight: 400;
+  line-height: 1.5;
+  margin:0
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1, .h2, .h3, .h4, .h5, .h6{
+
+  font-weight: 500;
+  line-height: 1.2;
+  margin-bottom: .5rem;
+  margin-top:0;
+}
+
+.h1,h1 {
+  font-size: calc(1.375rem + 1.5vw)
+}
+
+@media (min-width: 1200px) {
+  .h1,h1 {
+    font-size:2.5rem
+  }
+}
+
+.h2,h2 {
+  font-size: calc(1.325rem + .9vw)
+}
+
+@media (min-width: 1200px) {
+  .h2,h2 {
+    font-size:2rem
+  }
+}
+
+.h3,h3 {
+  font-size: calc(1.3rem + .6vw)
+}
+
+@media (min-width: 1200px) {
+  .h3,h3 {
+    font-size:1.75rem
+  }
+}
+
+.h4,h4 {
+  font-size: calc(1.275rem + .3vw)
+}
+
+@media (min-width: 1200px) {
+  .h4,h4 {
+    font-size:1.5rem
+  }
+}
+
+.h5,h5 {
+  font-size: 1.25rem
+}
+
+.h6,h6 {
+  font-size: 1rem
 }
