--- a/src/main/Main.module.css
+++ b/src/main/Main.module.css
@@ -1,17 +1,20 @@
 .mainBlock {
-    /*height: 100vh;*/
-    background-color: #9cd39b;
+    height: 100vh;
+    background-color: #343a40;
 }
 .mainContainer {
     align-items: center;
     justify-content: space-evenly;
-    background-color: #da8282;
+    background-color: #343a40;
 }
 
 
 .greeting {
     width: 300px;
-    background-color: #fff;
+    /*background-color: #fff;*/
+}
+.greenText {
+    color: #20c997;
 }
 
 .photo {
