--- a/src/projects/Projects.module.css
+++ b/src/projects/Projects.module.css
@@ -11,10 +11,10 @@
 }
 
 .projects {
-    border: 1px solid white;
     width: 100%;
     display: flex;
     justify-content: space-around;
+    align-items: flex-start;
     flex-wrap: wrap;
     margin-top: 30px;
 }
