--- a/src/header/Header.module.css
+++ b/src/header/Header.module.css
@@ -5,5 +5,8 @@
     justify-content: flex-end;
     align-items: center;
     flex-wrap: wrap;
+    position: fixed;
+    width: 100%;
+    z-index: 2;
 }
 
