--- a/src/index.css
+++ b/src/index.css
@@ -14,65 +14,64 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-
   color: #fff;
   font-weight: 400;
   line-height: 1.5;
   margin:0
 }
 
-h1, .h2, .h3, .h4, .h5, .h6{
-
+h1, h2, h3, h4, h5, h6{
   font-weight: 500;
   line-height: 1.2;
-  margin-bottom: .5rem;
+  margin-bottom: 8px;
   margin-top:0;
 }
 
-.h1,h1 {
-  font-size: calc(1.375rem + 1.5vw)
+h1{
+  font-size: calc(22px + 1.5vw)
 }
 
 @media (min-width: 1200px) {
-  .h1,h1 {
-    font-size:2.5rem
+  h1 {
+    font-size:40px;
   }
 }
 
-.h2,h2 {
-  font-size: calc(1.325rem + .9vw)
+h2 {
+  font-size: calc(21px + .9vw)
 }
 
 @media (min-width: 1200px) {
-  .h2,h2 {
-    font-size:2rem
+  h2 {
+    font-size:32px;
   }
 }
 
-.h3,h3 {
-  font-size: calc(1.3rem + .6vw)
+h3 {
+  font-size: calc(21px + .6vw)
 }
 
 @media (min-width: 1200px) {
-  .h3,h3 {
-    font-size:1.75rem
+  h3 {
+    font-size:28px;
   }
 }
 
-.h4,h4 {
-  font-size: calc(1.275rem + .3vw)
+h4 {
+  font-size: calc(20px + .3vw)
 }
 
 @media (min-width: 1200px) {
-  .h4,h4 {
-    font-size:1.5rem
+  h4 {
+    font-size:24px;
   }
 }
 
-.h5,h5 {
-  font-size: 1.25rem
+h5 {
+  font-size: 20px
 }
 
-.h6,h6 {
-  font-size: 1rem
+h6 {
+  font-size: 16rem
 }
+
