--- a/src/skills/skill/Skill.module.css
+++ b/src/skills/skill/Skill.module.css
@@ -1,11 +1,13 @@
 .skill {
-    background-color: #d293ac;
+    /*background-color: #d293ac;*/
     width: 250px;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
     padding: 20px;
+    /*padding-left: 90px;*/
+    /*padding-top: 0;*/
 }
 
 .icon {
@@ -14,9 +16,9 @@
     background-color: white;
 }
 
-.title {
-    background-color: #fff;
-}
+/*.title {*/
+/*    background-color: #fff;*/
+/*}*/
 
 
 .description {
