--- a/src/footer/Footer.module.css
+++ b/src/footer/Footer.module.css
@@ -23,13 +23,13 @@
     justify-content: space-between;
     flex-wrap: nowrap;
     margin-bottom: 20px;
-    background-color: #602b2b;
+    /*background-color: #602b2b;*/
 }
 
 .icon {
     width: 50px;
     height: 50px;
-    background-color: white;
+    /*background-color: white;*/
 }
 
 .copyright {
@@ -50,3 +50,13 @@
         text-align: center;
     }
 }
+
+a {
+    color: inherit; /* Унаследует цвет от родительского элемента */
+    text-decoration: none; /* Убирает подчеркивание ссылки */
+}
+
+a:hover {
+    color: rgba(255, 255, 255, 0.73); /* Унаследует цвет при наведении */
+}
+
