--- a/src/common/components/Title.module.scss
+++ b/src/common/components/Title.module.scss
@@ -1,4 +1,5 @@
 @import "../styles/sass/variables";
+@import "../styles/sass/mixins";
 
 .title {
   margin-bottom: 20px;
@@ -15,11 +16,12 @@
 
   & h2 {
     font-family: 'Poppins', sans-serif;
-    font-weight: 600;
+    @include text(600, 1.5);
+    //font-weight: 600;
+    //line-height: 1.5;
     margin: 0 0 10px 0;
     color: $textMainColor;
-    font-size: 36px;
-    line-height: 1.5;
+
     text-transform: capitalize;
   }
 }
