--- a/src/projects/project/Project.module.scss
+++ b/src/projects/project/Project.module.scss
@@ -1,19 +1,16 @@
 @import "../../common/styles/sass/variables";
+@import "../../common/styles/sass/mixins";
 
 .project {
   background-color: $textBgDarkerColor;
   width: 450px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  @include flex(column, $alignItems: flex-start);
   margin-bottom: 48px;
 
   .imgContainer {
     width: 100%;
     height: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -30,23 +27,9 @@
       opacity: 0.4;
     }
 
-    .button a {
-      position: relative;
+    .button {
       z-index: 1;
-      border-radius: 30px;
-      border: 1px solid $textBgLighterColor;
-      font-weight: 500;
-      padding: 0.8rem 2.6rem;
-      transition: all .5s ease;
-      color: $textBgLighterColor;
-      background-color: $hoverDarkerColor;
     }
-
-    & a:hover {
-      background-color: $hoverLighterColor;
-      color: $accentColor;
-    }
-
   }
 
   .projectInfo {
