--- a/src/skills/Skills.module.scss
+++ b/src/skills/Skills.module.scss
@@ -1,4 +1,5 @@
 @import "../common/styles/sass/variables.scss";
+@import "../common/styles/sass/mixins";
 
 .skillsBlock {
   min-height: 100vh;
@@ -6,16 +7,14 @@
   padding: 100px 0;
 
   .skillsContainer {
-    align-items: center;
-    flex-direction: column;
-    justify-content: flex-start;
+
+    @include flex(column, flex-start);
 
     .skills {
       margin: 30px 0 0 0;
       width: 100%;
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
+      @include flex($justifyContent: space-between) ;
+
       @media screen and (max-width: 629px) {
         justify-content: center;
       }
