--- a/src/skills/skill/Skill.module.scss
+++ b/src/skills/skill/Skill.module.scss
@@ -1,10 +1,9 @@
 @import "../../common/styles/sass/variables";
+@import "../../common/styles/sass/mixins";
 
 .skill {
   width: 250px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include flex(column);
   text-align: center;
   padding: 20px;
 
@@ -23,11 +22,5 @@
   }
 
 }
-
-
-/*.title {*/
-/*    background-color: #fff;*/
-/*}*/
-
 
 
