adding particle js library and animation to Main.tsx

--- a/src/contacts/Contacts.module.scss
+++ b/src/contacts/Contacts.module.scss
@@ -5,6 +5,7 @@
   min-height: 70vh;
   background-color: $textBgLighterColor;
   padding: 100px 0;
+  position: relative;
 
   .contactsContainer {
     background-color: $textBgLighterColor;
