--- a/src/footer/Footer.module.scss
+++ b/src/footer/Footer.module.scss
@@ -4,6 +4,7 @@
 .footerBlock {
   background-color: $textBgDarkerColor;
   padding: 50px 0;
+  position: relative;
 
   .footerContainer {
     background-color: $textBgDarkerColor;
