--- a/src/projects/Projects.module.scss
+++ b/src/projects/Projects.module.scss
@@ -3,6 +3,7 @@
 
 .projectsBlock {
   /*min-height: 100vh;*/
+  position: relative;
   background-color: $textBgLighterColor;
   padding: 100px 0;
 
