--- a/src/distantWork/DistantWork.module.scss
+++ b/src/distantWork/DistantWork.module.scss
@@ -2,7 +2,7 @@
 @import "../common/styles/sass/mixins";
 
 .distantWorkBlock {
-
+  position: relative;
   padding: 100px 0;
   background-color: $textBgDarkerColor;
 
