--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -4,7 +4,8 @@
 
   padding: 120px 0 100px 0;
   background-color: $textBgLighterColor;
-
+  position: relative;
+  
   .mainContainer {
     align-items: center;
     justify-content: space-evenly;
@@ -12,6 +13,7 @@
 
     .greeting {
       width: 300px;
+      margin-bottom: 20px;
 
       @media screen and (max-width: 375px) {
         text-align: center;
@@ -25,16 +27,38 @@
 
     .photo {
       width: 300px;
+      position: relative;
+      z-index: 0;
 
-      @media screen and (max-width: 380px) {
-        width: 200px;
-  
-      }
+      .image {
+        height: 400px;
+        width: 300px;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-image: url("../assets/avatar2.jpeg");
+        transition: .5s;
 
-      img {
-        max-width: 100%;
-        height: auto;
-        object-fit: cover;
+        @media screen and (max-width: 600px) {
+          height: 360px;
+          width: 260px;
+          transition: .5s;
+
+        }
+
+        &::before {
+          content: '';
+          border: 3px solid $accentColor;
+          height: 110%;
+          width: 105%;
+          z-index: -1;
+          left: 15px;
+          top: -15px;
+          position: absolute;
+          @media screen and (max-width: 380px) {
+            width: 90%;
+          }
+        }
       }
     }
   }
