--- a/src/index.scss
+++ b/src/index.scss
@@ -4,8 +4,7 @@ body {
   font-family: 'Poppins', sans-serif;
   color: #fff;
   @include text(400, 1.5);
-  margin: 0
-
+  margin: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
