--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@
 body {
   font-family: 'Poppins', sans-serif;
   color: #fff;
+  background-color: #343a40;
   @include text(400, 1.5);
   margin: 0;
 }
