--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -1,15 +1,28 @@
 @import "../common/styles/sass/variables";
 
 .mainBlock {
-
-  padding: 130px 0 100px 0;
+  margin-top: 80px;
+  padding: 80px 0 100px 0;
   background-color: $textBgLighterColor;
   position: relative;
 
   .mainContainer {
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     background-color: $textBgLighterColor;
+
+    @media screen and (max-width: 600px) {
+      display: flex;
+      flex-direction: column;
+      align-content: center;
+      align-items: flex-start;
+    }
+    @media screen and (max-width: 375px) {
+      display: flex;
+      flex-direction: column;
+      //align-content: center;
+      //align-items: center;
+    }
 
     .greeting {
       width: 300px;
@@ -17,6 +30,7 @@
 
 
       @media screen and (max-width: 375px) {
+        width: auto;
         text-align: center;
       }
 
@@ -39,6 +53,7 @@
         background-repeat: no-repeat;
         background-image: url("../assets/avatar2.jpeg");
         transition: .5s;
+
 
         @media screen and (max-width: 600px) {
           height: 360px;
@@ -66,6 +81,8 @@
     }
   }
 }
+
+
 
 
 
