--- a/src/skills/skill/Skill.module.scss
+++ b/src/skills/skill/Skill.module.scss
@@ -8,9 +8,15 @@
   padding: 20px;
 
   .icon {
-    width: 60px;
-    height: 60px;
-    background-color: $textMainColor;
+    width: 40px;
+    height: 40px;
+    @include flex;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+
+    //background-color: $textMainColor;
   }
 
   .title {
