added styles to burger-menu

--- a/src/common/components/Button.module.scss
+++ b/src/common/components/Button.module.scss
@@ -16,6 +16,8 @@
   cursor: pointer;
 
   &:hover {
+    transform: scale(1.2);
+    transition: transform 0.3s ease-in-out;
     background-color: $hoverLighterColor;
     color: $accentColor;
     cursor: pointer;
