--- a/src/burgerNav/BurgerNav.module.scss
+++ b/src/burgerNav/BurgerNav.module.scss
@@ -2,14 +2,12 @@
 @import "../common/styles/sass/mixins";
 
 .burgerNav {
-  //border: 1px solid;
   width: 100%;
   height: 100%;
   background-color: $textBgDarkerColor;
 
-
   .burgerNavItems {
-    @include flex(column, $justifyContent: center, $alignItems: center, $flexWrap: nowrap);
+    @include flex(column, $justifyContent: center, $alignItems: center, $flexWrap: wrap);
     position: absolute;
     right: 0;
     left: 0;
@@ -35,7 +33,7 @@
   }
 
   .show {
-    height: 150px;
+    height: 80px;
     transform: translate(0, 0);
     transition: 0.7s;
   }
@@ -48,8 +46,12 @@
     position: absolute;
     right: 0;
     cursor: pointer;
-    padding: 20px;
+    padding: 20px 10px;
 
+    &:hover {
+      transform: scale(1.2);
+      transition: transform 0.3s ease-in-out;
+    }
 
     .line {
       width: 20px;
@@ -58,8 +60,36 @@
       margin: 2px 0;
       transition: background-color 0.3s ease;
     }
-  }
 
+    .closeIcon {
+      width: 20px;
+      height: 20px;
+      position: relative;
+      cursor: pointer;
+      transition: transform 0.5s ease;
+    }
+
+    .closeIcon:before,
+    .closeIcon:after {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 100%;
+      height: 2px;
+      background-color: $accentColor;
+      transition: transform 0.5s ease;
+    }
+
+    .closeIcon:before {
+      transform: translate(-50%, -50%) rotate(45deg);
+      transition: transform 0.5s ease;
+    }
+
+    .closeIcon:after {
+      transform: translate(-50%, -50%) rotate(-45deg);
+    }
+  }
 
   @media screen and (max-width: 221px) {
     justify-content: space-around;
