--- a/src/footer/Footer.module.scss
+++ b/src/footer/Footer.module.scss
@@ -33,6 +33,11 @@
         width: 50px;
         height: 50px;
 
+        &:hover {
+          transform: scale(1.2);
+          transition: transform 0.3s ease-in-out;
+        }
+
         @media screen and (max-width: 629px) {
           width: 30px;
           height: 30px;
