--- a/src/skills/skill/Skill.module.scss
+++ b/src/skills/skill/Skill.module.scss
@@ -8,13 +8,18 @@
   padding: 20px;
 
   .icon {
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 80px;
     @include flex;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
+
+    &:hover {
+      transform: scale(1.2);
+      transition: transform 0.3s ease-in-out;
+    }
 
     //background-color: $textMainColor;
   }
